# rubby

./: .gitignore  .rubocop.yml  Cargo.toml  Gemfile  README.md  Rakefile  rubby.gemspec
lib/: rubby.rb
lib/rubby/: version.rb
spec/: rubby_spec.rb  spec_helper.rb
src/: lib.rs  parser.rs  rbs.rs
src/parser/: annotations.rs  class_decl.rs  const_decl.rs  global_decl.rs  interface_decl.rs  module_decl.rs  rbs.pest  signature.rs  tests.rs  type.rs  type_decl.rs  type_with_path.rs  whitespace.rs
src/parser/tests/: types.rs
src/rbs/: parser.rs
tests/: blah.rs
